# dawg-new

./: .gitignore  LICENSE  README.md  dawg.cabal
bench/: BuildBenchmarkSuite.hs
src/Data/DAWG/: Dynamic.hs
src/Data/DAWG/Dynamic/: ByteState.hs  Internal.hs  Stack.hs  State.hs  Trie.hs  Types.hs
src/Data/DAWG/Dynamic/State/: EdgeMap.hs
src/Data/DAWG/Dynamic/State/EdgeMap/: Map.hs
src/Data/DAWG/Dynamic/State/Trans/: Map.hs  Vect.hs
tests/: TestSuite.hs  Tests.hs
