name:               dawg
version:            1.0
synopsis:           Directed acyclic word graphs
description:
    The library implements /directed acyclic word graphs/ (DAWGs) internaly
    represented as /minimal acyclic deterministic finite-state automata/.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2012 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Data, Data Structures
homepage:           https://github.com/kawu/dawg-new
build-type:         Simple

library
    hs-source-dirs: src
    
    build-depends:
        base >= 4 && < 5
      , containers >= 0.4.1 && < 0.6
      , binary
      , vector
      , vector-binary
      , pipes >= 3.2 && < 3.4
      , mtl

    exposed-modules:
        Data.DAWG.Dynamic.Types
      , Data.DAWG.Dynamic.State
      , Data.DAWG.Dynamic.Internal
      , Data.DAWG.Dynamic.Stack
      , Data.DAWG.Dynamic

    other-modules:

    ghc-options: -Wall -O2

test-suite tests
    type:           exitcode-stdio-1.0
    main-is:        Tests.hs
    build-depends: 
        base
      , QuickCheck >= 2.6 && < 2.7
    hs-source-dirs: tests src

source-repository head
    type: git
    location: https://github.com/kawu/dawg-new.git
